# vital

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.monitoring.yml  docker-compose.yml  grpc_wrapper.sh  package-lock.json  protoc_wrapper.sh  test_health_professional.py  test_health_simple.py  test_integration_simple.py  test_metrics_only.py  test_orchestrator_simple.py  test_orchestrator_without_docker.py  yaml_check.sh
.github/workflows/: ci.yml
backend/: .env.example  .env.sample  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: aiosqlite_compatibility.py  config.py  database.py  main.py
backend/tests/: conftest.py  test_api.py  test_api_auth_login.py
backend/venv311/: pyvenv.cfg
blockchain/: consensus.rs  consensus_crypto.rs  hsm_integration.rs  key_management.rs  ledger_storage.rs  peer_network.rs  quantum_crypto.rs  secure_network.rs  smart_contracts.rs  test_coverage_report.json
blockchain/benchmarks/: benchmark_results.json  performance_benchmark.rs
blockchain/ci_artifacts/: end_to_end_tps_benchmark.json  security_audit_report.json
blockchain/contracts/: PatientDataAccess.sol  ResearchDataSharing.sol
blockchain/deploy/: CI_CD_pipeline.yml  Dockerfile  chain_spec.json  deploy.sh  docker-compose.yml  production_deployment_guide.md
blockchain/scripts/: generate_tps_benchmark.sh  run_ci_locally.sh
blockchain/tests/: distributed_consistency_test.rs
central-station/: CMakeLists.txt  README.md
central-station/include/: mainwindow.h
central-station/src/: main.cpp  mainwindow.cpp
central-station/src/patient/: patient_manager.h
central-station/src/reporting/: pdf_report_generator.h
central-station/src/trends/: trend_chart_widget.cpp  trend_chart_widget.h
central-station/src/ui/: draggable_widget.h  high_contrast_theme.h  quick_view_dashboard.cpp  quick_view_dashboard.h  touchscreen_support.h
central-station/src/waveform/: ecg_12lead_widget.cpp  ecg_12lead_widget.h  waveform_renderer.cpp  waveform_renderer.h
clinical-modules/cardiology-module/: Cargo.toml
clinical-modules/ed-module/: Cargo.toml
clinical-modules/icu-module/: Cargo.toml
clinical-modules/icu-module/src/: main.rs
clinical-modules/neonatal-module/: Cargo.toml
clinical-modules/or-module/: Cargo.toml
core/: CMakeLists.txt
core/include/: core.h  ecg_analyzer.hpp  ecg_generator.hpp
core/src/: bindings.cpp  core.cpp  ecg_analyzer.cpp  ecg_generator.cpp
device-drivers/: Cargo.toml  README.md
device-drivers/ble-driver/: Cargo.toml
device-drivers/ble-driver/src/: lib.rs
device-drivers/device-specific/: Cargo.toml
device-drivers/device-specific/src/: common.rs  ge_healthcare.rs  lib.rs  mindray.rs  philips.rs
device-drivers/serial-driver/: Cargo.toml
device-drivers/serial-driver/src/: lib.rs
device-drivers/signal-processing/: Cargo.toml
device-drivers/signal-processing/src/: lib.rs
device-drivers/src/: error.rs  lib.rs  traits.rs  types.rs
device-drivers/src/protocols/: dicom.rs  hl7.rs  ieee11073.rs  mod.rs
device-drivers/usb-driver/: Cargo.toml
device-drivers/usb-driver/src/: lib.rs
device-drivers/wifi-driver/: Cargo.toml
device-drivers/wifi-driver/src/: lib.rs
dicom-service/: CMakeLists.txt  CMakeLists_ENHANCED.txt  CMakeLists_FINAL.txt  CMakeLists_MINIMAL.txt  Dockerfile  PROFESSIONAL_DICOM_IMPLEMENTATION_PLAN.md
dicom-service/include/: database_manager.h  dicom_query.h  dicom_scp.h  dicom_service_impl.h  dicom_storage.h  dicom_waveform.h  grpc_server.h  health_service.h  pacs_connector.h  waveform_extractor.h
dicom-service/src/: audit_logger.cpp  audit_logger.h  dicom_scp.cpp  dicom_service_impl.cpp  dicom_service_impl.h  dicom_waveform.cpp  health_service.cpp  health_service.h  main.cpp  pacs_connector.cpp  storage_manager.cpp  storage_manager.h  waveform_extractor.cpp
dicom-service/tests/: CMakeLists.txt  CMakeLists_ENHANCED.txt  dicom_validation_test.cpp  integration_test.py  performance_test.cpp  simple_test.cpp  simple_test.py  test_dicom_service.cpp  test_waveform_extractor.cpp
docker/: Dockerfile.emsdk  README.md
docs/: API_DOCUMENTATION.md  GDPR_IMPLEMENTATION_GUIDE.md  HIPAA_COMPLIANCE_GUIDE.md  INSTALLATION_GUIDE.md  MAINTENANCE_GUIDE.md  QUICK_REFERENCE.md  SECURITY_POLICIES.md  TECHNICAL_DOCUMENTATION.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDE.md  USER_MANUAL.md  USER_MANUAL_TR.md  architecture.md  artifact-clinical-guide.md  binary_protocol_spec.md  device_adapter_pattern.md  kong-setup.md  overview.md  pan_tompkins_algorithm.md  setup_dev.md  sqi-clinical-guide.md  websocket_compression.md  websocket_monitoring.md  websocket_multi_client.md
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
gesture_control/: gesture_recognizer.py
hl7-integration-service/: Dockerfile  README.md  pom.xml
ml-inference/: Cargo.toml  README.md
ml-inference/src/: lib.rs
ml-inference/src/clinical/: cardiac.rs  ews.rs  mod.rs  sepsis.rs
ml-inference/src/models/: arrhythmia.rs  hrv_analysis.rs  mi_detection.rs  mod.rs
ml-inference/src/preprocessing/: filters.rs  mod.rs  quality.rs
ml-inference/src/utils/: mod.rs
ml-training/: README.md  requirements.txt
ml_marketplace/: ab_testing_framework.py  marketplace_ui.tsx  model_registry.py
monitoring/: README.md  alertmanager.yml  docker-compose.monitoring.yml  prometheus.yml
performance/: Cargo.toml  cache_strategy.rs  db_optimizer.rs  frontend_optimizer.ts  lib.rs  load_tester.rs  memory_leak_detector.rs  network_optimizer.rs  profiler.rs  realtime_optimizer.rs
protos/: README.md  buf.gen.yaml  buf.yaml
scripts/: build-wasm-local.sh  build-wasm.sh  build.sh  setup_dev.sh
wasm/: WASM_BUILD_OPTIMIZATION.md  build_optimized.sh  build_wasm_pack.sh
wasm/ecg_processor_py/: Cargo.toml  README.md  pyproject.toml
wasm/ecg_processor_py/python/ecg_processor_py/: __init__.py  analyzer.py  config.py
wasm/ecg_processor_py/src/: lib.rs
wasm/ecg_processor_py/tests/: test_ecg_ffi.py
wasm/ecg_processor_py/tools/: performance_comparison.py
(+206 files in other folders)
