[package]
name = "vitalstream-device-drivers"
version = "0.1.0"
edition = "2021"
authors = ["VitalStream Team"]
license = "MIT"
description = "Medical device drivers for VitalStream - FDA/IEC 62304 compliant"

[workspace]
members = [
    ".",
    "ble-driver",
    "usb-driver",
    "serial-driver",
    "wifi-driver",
    "signal-processing",
    "device-specific",
]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# FDA/IEC 62304 compliance: strict safety checks
[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = true
