[package]
name = "vital-ml-inference"
version = "0.1.0"
edition = "2021"
authors = ["VitalStream Team"]
description = "Production ML inference engine for VitalStream - FDA/IEC 62304 compliant"

[dependencies]
# ONNX Runtime for model inference
ort = "1.16"

# Numerical computing
ndarray = "0.15"
num-traits = "0.2"

# Signal processing
rustfft = "6.1"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Metrics
prometheus = "0.13"

[dev-dependencies]
criterion = "0.5"  # Benchmarking

[[bench]]
name = "inference_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
