[package]
name = "serial-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
vitalstream-device-drivers = { path = ".." }

# Serial port support
tokio-serial = "5.4"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
