[package]
name = "signal-processing"
version = "0.1.0"
edition = "2021"

[dependencies]
vitalstream-device-drivers = { path = ".." }

# Signal processing
rustfft = "6.1"
ndarray = "0.15"

# Statistics
statrs = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Math
num-complex = "0.4"
