[package]
name = "wifi-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
vitalstream-device-drivers = { path = ".." }

# Network support
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# mDNS/Bonjour for device discovery
mdns-sd = "0.10"

# Async
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"
